--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "devDependencies": {
     "cross-env": "^5.0.1",
-    "laravel-mix": "^1.0"
+    "laravel-mix": "^1.0",
+    "lodash": "^4.17.4"
   },
   "dependencies": {
     "axios": "^0.16.2",
