--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "bootstrap-sass": "^3.3.7",
     "jquery": "^3.2.1",
     "vue": "^2.4.4",
-    "vue-route": "^1.5.1"
+    "vue-router": "^2.7.0"
   }
 }
